--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
   google_sign_in: ^6.1.1
-
+  fl_chart: ^0.35.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   image_picker: ^0.8.7+4
-  file_picker: ^5.0.0
+  file_picker: ^8.1.7
   intl: ^0.17.0
 
 dev_dependencies:
